updated carousel/added buttons & imgs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link text-light" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light orange" href="Products.html">Products</a>
+                    <a class="nav-link text-light" href="Products.html">Products</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="NewArrival.html">New Arrival</a>
@@ -49,27 +49,42 @@
         </div>
     </nav>
     <!------------------------------------------- Nav-Bar Ended ---------------------------------------------->
-
-    <!------------------------------------------ Carousel-Slider --------------------------------------------->
-    <section id="slider">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-interval="2500">
-                    <img class="d-block w-100" src="assets/images/Carousel/img 01.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item" data-interval="2500">
-                    <img class="d-block w-100" src="assets/images/Carousel/img 02.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item" data-interval="2500">
-                    <img class="d-block w-100" src="assets/images/Carousel/img 03.jpg" alt="Third slide">
-                </div>
-                <div class="carousel-item" data-interval="2500">
-                    <img class="d-block w-100" src="assets/images/Carousel/img 04.jpg" alt="Forth slide">
+    <section id="banner">
+        <div>
+            <a href="NewArrival.html"><img class="new-img" src="assets/images/index/New.png" alt="New Arrivals"></a>
+            <a href="SpecialOffers.html"><img class="special-img" src="assets/images/index/special-offers.png" alt="Special Offers"></a>
+        </div>
+        <!------------------------------------------ Carousel-Slider --------------------------------------------->
+        <section id="slider">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <a href="Products.html"><button class="shop-now-btn" type="button">Buy Now</button></a>
+                    <div class="carousel-item active" data-interval="2500">
+                        <img class="d-block w-100" src="assets/images/Carousel/img 01.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item" data-interval="2500">
+                        <img class="d-block w-100" src="assets/images/Carousel/img 02.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item" data-interval="2500">
+                        <img class="d-block w-100" src="assets/images/Carousel/img 03.jpg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item" data-interval="2500">
+                        <img class="d-block w-100" src="assets/images/Carousel/img 04.jpg" alt="Forth slide">
+                    </div>
+                    <div class="carousel-item" data-interval="2500">
+                        <img class="d-block w-100" src="assets/images/Carousel/img 05.jpg" alt="Fifth slide">
+                    </div>
+                    <div class="carousel-item" data-interval="2500">
+                        <img class="d-block w-100" src="assets/images/Carousel/img 06.jpg" alt="Sixth slide">
+                    </div>
+                    <div class="carousel-item" data-interval="2500">
+                        <img class="d-block w-100" src="assets/images/Carousel/img 07.jpg" alt="Seventh slide">
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <!-- Carousel Ended -->
     </section>
-    <!-- Carousel Ended -->
     <main>
         <!-- content -->
     </main>
@@ -97,7 +112,6 @@
 
     <!----------------------------------------------------- JavaScript -------------------------------------------->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 
