--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
 <body>
     <!--------------------------------------------Nav-Bar Starts----------------------------------------------->
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-cc">
         <a class="navbar-brand" href="#"><img width="80px" src="assets/images/logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -49,11 +49,66 @@
     </nav>
     <!------------------------------------------- Nav-Bar Ended ---------------------------------------------->
     <main>
-        <!-- content -->
+        <section id="contact">
+            <div class="contact">
+                <div class="getintouch">
+                    <h1>Get in touch</h1>
+                    <p>Went to get in touch? we'd love to hear from you. Here's how you can reach us...</p>
+                </div>
+                <div class="container">
+                    <div class="contactinfo">
+                        <div class="box">
+                            <div class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+                            <div class="email">
+                                <h3>Email</h3>
+                                <p><a class="link" href="https://mail.google.com/mail/u/0/?tab=rm#inbox">crystalproducts@gmail.com</a></p>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="icon"><i class="fa fa-phone"></i></div>
+                            <div class="phone">
+                                <h3>Phone</h3>
+                                <p><a class="link" href="tel:+123-246-6789">+123-456-6789</a></p>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <a class="link" href="https://goo.gl/maps/C8aCFqgzPPRnvBcs5">
+                                <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+                            </a>
+                            <div class="address">
+                                <h3>Address</h3>
+                                <p>Aptect Computer Education,<br>Gulshan-e-iqbal Block 6,<br>Karachi.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contactFrom">
+                        <form>
+                            <h2>Fill out the from and we will be in touch</h2>
+                            <div class="inputBox">
+                                <input type="text" name="" required="required">
+                                <span>Full Name</span>
+                            </div>
+                            <div class="inputBox">
+                                <input type="text" name="" required="required">
+                                <span>Email</span>
+                            </div>
+                            <div class="inputBox">
+                                <textarea required="required"></textarea>
+                                <span>Leave a commet...</span>
+                            </div>
+                            <div class="inputBox">
+                                <input type="submit" name="" value="Send">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!------------------------------------------------- Footer Started ------------------------------------------->
-    <footer class="footer bg-dark">
+    <footer class="footer bg-cc">
         <div class="container-fluid">
+            <img src="assets/images/favicon.png" class="footer-img">
             <h3 class="text-center text-white">Crystal Products</h3>
             <div class="social-links">
                 <i class="fa fa-facebook"></i>
