--- a/SpecialOffers.html
+++ b/SpecialOffers.html
@@ -26,13 +26,13 @@
                     <a class="nav-link text-light" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="Products.html">Products</a>
+                    <a class="nav-link text-light" href="products.html">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="NewArrival.html">New Arrival</a>
+                    <a class="nav-link text-light" href="newarrival.html">New Arrival</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link text-light" href="SpecialOffers.html">Special Offers</a>
+                    <a class="nav-link text-light" href="specialoffers.html">Special Offers</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="contact.html">Contact Us</a>
